<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Movilidad Guatex</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_click">Title click</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_sincronizar">Sincronizar</string>
    <string name="menu_informe">Informe</string>
    <string name="menu_config">Configuracion</string>
    <string name="menu_salir">Salir</string>
    <string name="menu_group">General</string>
    <string name="sub_menu_1">Detalle envio</string>
    <string name="mensajeBajada">Ultima sincronización de bajada</string>
    <string name="fechaBajada">yyyy/mm/dd</string>
    <string name="copyright">© Guatex - www.guatex.com</string>
    <string name="tituloEntrega">Entrega</string>
    <string name="fechaSubida">yyyy/mm/dd</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingresar">Ingresar</string>
    <string name="usuario">Usuario</string>
    <string name="ruta">Ruta</string>
    <string name="password">Password</string>
    <string name="bajarDatos">Bajar datos</string>
    <string name="subirDatos">Subir datos</string>
    <string name="btnLoginConfig">Configurar</string>
    <string name="direccionIP">Dirección TCP/IP</string>
    <string name="btnTest">Test</string>
    <string name="btnGuardar">Guardar</string>
    <string name="direIp">https://0.0.0.0/puerto/metodo</string>
</resources>
