<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuracion">

    <EditText
        android:id="@+id/txUsuario"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="495dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txContraseña"
        android:layout_width="189dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="438dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/txdireccionIP"
        android:layout_marginTop="219dp"
        android:layout_marginBottom="420dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:layout_marginStart="214dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="471dp"
        android:background="@drawable/boton_blue_redondo"
        android:text="@string/btnLoginConfig"
        android:textAllCaps="false"
        android:textColor="#F5F0F0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txdireccionIP"
        android:layout_width="327dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="283dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="313dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/direccionIP"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="384dp"
        android:text="Dirección del servidor de datos"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="187dp"
        android:text="Configuración Actual"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="548dp"
        android:text="Datos del administrador"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/txdireccionIP"
        android:layout_marginTop="411dp"
        android:layout_marginBottom="228dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="107dp"
        android:layout_height="49dp"
        android:layout_marginStart="179dp"
        android:layout_marginTop="342dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="249dp"
        android:background="@drawable/boton_blue_redondo"
        android:text="@string/btnGuardar"
        android:textAllCaps="false"
        android:textColor="#F5F0F0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="342dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="249dp"
        android:background="@drawable/boton_blue_redondo"
        android:text="@string/btnTest"
        android:textAllCaps="false"
        android:textColor="#F5F0F0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDireccionActual"
        android:layout_width="260dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="461dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="151dp"
        android:text="@string/direIp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.constraint.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>