<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sincronizar">


    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/txdireccionIP"
        android:layout_marginTop="218dp"
        android:layout_marginBottom="421dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBajarDatos"
        android:layout_width="216dp"
        android:layout_height="54dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="454dp"
        android:background="@drawable/boton_normal"
        android:onClick="datosBajar"
        android:text="@string/bajarDatos"
        android:textAllCaps="false"
        android:textColor="#FAF9F9"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="570dp"
        android:text="Ultima sincronización de bajada"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="262dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="346dp"
        android:text="Ultima sincronización de bajada"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFechaBajo"
        android:layout_width="329dp"
        android:layout_height="34dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="520dp"
        android:hint="@string/fechaBajada"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="319dp"
        android:layout_height="37dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="292dp"
        android:text="@string/fechaSubida"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSubirDatos"
        android:layout_width="219dp"
        android:layout_height="53dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="379dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="208dp"
        android:background="@drawable/boton_normal"
        android:text="@string/subirDatos"
        android:textAllCaps="false"
        android:textColor="#FAF9F9"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>